--- a/package.json
+++ b/package.json
@@ -1,21 +1,54 @@
 {
-  "name": "client",
+  "name": "aqua-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.19",
+    "@ethersproject/bignumber": "^5.2.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "@uniswap/sdk": "^3.0.3",
+    "@uniswap/sdk-core": "^3.0.0-alpha.2",
+    "@uniswap/v3-sdk": "^3.0.0-alpha.9",
+    "@web3-react/authereum-connector": "^6.1.6",
+    "@web3-react/core": "^6.1.1",
+    "@web3-react/fortmatic-connector": "^6.1.6",
+    "@web3-react/frame-connector": "^6.0.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/ledger-connector": "^6.1.1",
+    "@web3-react/network-connector": "^6.1.3",
+    "@web3-react/portis-connector": "^6.1.6",
+    "@web3-react/squarelink-connector": "^6.1.6",
+    "@web3-react/torus-connector": "^6.1.7",
+    "@web3-react/trezor-connector": "^6.1.6",
+    "@web3-react/walletconnect-connector": "^6.1.6",
+    "@web3-react/walletlink-connector": "^6.1.6",
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
+    "ethers": "^5.1.4",
+    "graphql": "^15.5.0",
+    "lodash": "^4.17.20",
+    "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
